# lumen

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
src/lumen/: CLAUDE.md  CMakeLists.txt  main.cpp
src/lumen/app/: Application.cpp  Application.h  CLAUDE.md
src/lumen/core/: CLAUDE.md  CMakeLists.txt  Command.h  CommandBus.cpp  CommandBus.h  DocumentRegistry.cpp  DocumentRegistry.h  EventBus.cpp  EventBus.h  PlotRegistry.cpp  PlotRegistry.h
src/lumen/core/commands/: ChangeAnnotationCommand.cpp  ChangeAnnotationCommand.h  (+28 more)
src/lumen/dashboard/: CMakeLists.txt  Dashboard.cpp  Dashboard.h  DashboardSerializer.cpp  DashboardSerializer.h  DashboardWidget.cpp  DashboardWidget.h  GridLayout.cpp  GridLayout.h  LinkChannel.h  LinkGroup.cpp  LinkGroup.h  PanelConfig.h
src/lumen/data/: CLAUDE.md  CMakeLists.txt  Column.cpp  Column.h  ColumnType.h  CoordinateArray.cpp  CoordinateArray.h  CsvError.h  CsvReader.cpp  CsvReader.h  DataFrame.cpp  DataFrame.h  Dataset.cpp  Dataset.h  Dimension.h  FileLoader.cpp  FileLoader.h  Grid2D.cpp  Grid2D.h  MemoryManager.cpp  MemoryManager.h  Rank1Dataset.cpp  Rank1Dataset.h  TabularBundle.cpp  TabularBundle.h  Unit.cpp  Unit.h  Volume3D.cpp  Volume3D.h
src/lumen/export/: CMakeLists.txt  ColorPipeline.cpp  ColorPipeline.h  ColorProfile.cpp  ColorProfile.h  ExportTask.cpp  ExportTask.h  FontEmbedder.cpp  FontEmbedder.h  MathRenderer.cpp  MathRenderer.h
src/lumen/plot/: Annotation.cpp  Annotation.h  AnnotationLayer.cpp  AnnotationLayer.h  Axis.cpp  Axis.h  BarSeries.cpp  BarSeries.h  BoxPlotSeries.cpp  BoxPlotSeries.h  CLAUDE.md  CMakeLists.txt  Colormap.cpp  Colormap.h  ContourAlgorithm.cpp  ContourAlgorithm.h  ContourPlot.cpp  ContourPlot.h  CoordinateMapper.cpp  CoordinateMapper.h  Heatmap.cpp  Heatmap.h  HistogramSeries.cpp  HistogramSeries.h  HitTester.cpp  HitTester.h  Legend.cpp  Legend.h  LineSeries.cpp  LineSeries.h  NiceNumbers.cpp  NiceNumbers.h  PlotItem.h  PlotRenderer.cpp  PlotRenderer.h  PlotScene.cpp  PlotScene.h  PlotStyle.h  ScatterSeries.cpp  ScatterSeries.h  (+4 more)
src/lumen/plot3d/: BoundingBox3D.h  CMakeLists.txt  Camera.cpp  Camera.h  Isosurface.cpp  Isosurface.h  Light.h  MarchingCubes.cpp  MarchingCubes.h  PbrMaterial.h  PlotItem3D.h  Ray.cpp  Ray.h  RenderContext.h  Renderer3D.cpp  Renderer3D.h  Scatter3D.cpp  Scatter3D.h  Scene3D.cpp  Scene3D.h  ShaderProgram.cpp  ShaderProgram.h  SpatialGrid3D.cpp  SpatialGrid3D.h  Streamlines.cpp  Streamlines.h  Surface3D.cpp  Surface3D.h  TransferFunction.cpp  TransferFunction.h  VolumeItem.cpp  VolumeItem.h
src/lumen/style/: CLAUDE.md  CMakeLists.txt  DesignTokens.cpp  DesignTokens.h  StyleManager.cpp  StyleManager.h  cascade.cpp  cascade.h  clipboard.cpp  clipboard.h  extends_resolver.cpp  extends_resolver.h  json_io.cpp  json_io.h  theme_fork.cpp  theme_fork.h  theme_registry.cpp  theme_registry.h  types.h
src/lumen/ui/: AddPanelDialog.cpp  AddPanelDialog.h  AnnotationPropertyDialog.cpp  AnnotationPropertyDialog.h  AnnotationToolbar.cpp  AnnotationToolbar.h  AxisDialog.cpp  AxisDialog.h  BarPropertyDialog.cpp  BarPropertyDialog.h  BoxPlotPropertyDialog.cpp  BoxPlotPropertyDialog.h  CLAUDE.md  ContourPropertyDialog.cpp  ContourPropertyDialog.h  DashboardToolbar.cpp  DashboardToolbar.h  DataFrameTableModel.cpp  DataFrameTableModel.h  DataTableDock.cpp  DataTableDock.h  ExportDialog.cpp  ExportDialog.h  ExportProgressDialog.cpp  ExportProgressDialog.h  FontPicker.cpp  FontPicker.h  HeatmapPropertyDialog.cpp  HeatmapPropertyDialog.h  HistogramPropertyDialog.cpp  HistogramPropertyDialog.h  InteractionController.cpp  InteractionController.h  LegendDialog.cpp  LegendDialog.h  LinePropertyDialog.cpp  LinePropertyDialog.h  MainWindow.cpp  MainWindow.h  PlotCanvas.cpp  (+19 more)
src/lumen/util/: CLAUDE.md
tests/: CMakeLists.txt  lsan_suppressions.txt
tests/export/: compare.py  generate_fixtures.py  test_pdfa_compliance.py  test_svg_compliance.py  test_vector_consistency.py
tests/export/render_runners/: inkscape_runner.py  pdftocairo_runner.py  playwright_runner.py
tests/fixtures/tiny/: electrophys_sample.csv  rfc4180_quoted.csv  simple_3x4.csv  single_column.csv  with_header.csv  with_nan.csv
tests/integration/: CMakeLists.txt  test_open_csv.cpp
tests/microtex/: generate_corpus.py
tests/microtex/corpus/: README.md  tier1_01.tex  tier1_02.tex  tier1_03.tex  tier1_06.tex  tier1_07.tex  tier1_08.tex  tier1_09.tex  tier1_10.tex  tier1_11.tex  tier1_13.tex  tier1_14.tex  tier1_15.tex  tier1_16.tex  tier1_17.tex  tier1_18.tex  tier1_19.tex  tier2_01.tex  tier2_02.tex  tier2_04.tex  tier2_05.tex  tier2_06.tex  tier2_07.tex  tier2_08.tex  tier2_09.tex  tier2_10.tex  tier2_12.tex  tier2_13.tex  tier2_14.tex  tier2_15.tex  tier2_16.tex  tier2_17.tex  tier2_18.tex  tier2_19.tex  tier2_20.tex  tier2_21.tex  tier2_22.tex  tier2_23.tex  tier2_24.tex  tier2_25.tex  (+12 more)
tests/smoke/: CMakeLists.txt  pixel_utils.h  smoke_test_app.cpp  smoke_test_dashboard.cpp
tests/spike/: CMakeLists.txt  test_grid2d_arithmetic.cpp
tests/unit/: CMakeLists.txt  test_3d_edge_cases.cpp  test_academic_fonts_loaded.cpp  test_annotation_layer.cpp  test_annotation_workspace.cpp  test_arrow_annotation.cpp  test_axis.cpp  test_axis_commands.cpp  test_axis_setters.cpp  test_bar_commands.cpp  test_bar_series.cpp  test_bounding_box3d.cpp  test_boxplot.cpp  test_boxplot_commands.cpp  test_camera_json.cpp  test_camera_mode_switch.cpp  test_camera_orbit.cpp  test_camera_trackball.cpp  test_cascade.cpp  test_clipboard.cpp  test_color_conversion.cpp  test_color_profile_builtin.cpp  test_color_profile_from_file.cpp  test_colormap_builtin.cpp  test_colormap_colorblind.cpp  test_colormap_edge_cases.cpp  test_colormap_interpolation.cpp  test_colormap_json_roundtrip.cpp  test_colormap_perceptual.cpp  test_command_bus.cpp  test_contour_algorithm.cpp  test_contour_commands.cpp  test_contour_plot.cpp  test_coordinate_array.cpp  test_coordinate_mapper.cpp  test_csv_loader.cpp  test_csv_reader.cpp  test_dashboard_cascade.cpp  test_dashboard_commands.cpp  test_dashboard_model.cpp  (+86 more)
(+214 files in other folders)
